--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Editorial</strong> SIYU</a>
+                    <a href="index.html" class="logo"><strong>司宇</strong> SIYU</a>
                     <ul class="icons">
                         <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                         <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -39,10 +39,9 @@
                     <div class="content">
                         <header>
                             <h1>Hi, I’m Kenny 司宇</h1>
-                            <p>A free and fully responsive site template</p>
+                            <p>江苏大学硕士研究生</p>
                         </header>
-                        <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam
-                            maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+                        <p>研究方向为深度学习可解释性.</p>
                         <ul class="actions">
                             <li><a href="#" class="button big">Learn More</a></li>
                         </ul>
