--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         </header>
                         <p>研究方向为深度学习可解释性.</p>
                         <ul class="actions">
-                            <li><a href="#" class="button big">Learn More</a></li>
+                            <li><a href="http://www.siyukenny.top/" class="button big">Learn More 关于更多</a></li>
                         </ul>
                     </div>
                     <span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="https://s2.loli.net/2022/07/13/d84qjSHOtymL1XT.png" alt="" />
 									</span>
                 </section>
 
