--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </ul>
                     </div>
                     <span class="image object">
-										<img src="https://s2.loli.net/2022/07/13/d84qjSHOtymL1XT.png" width="100%" alt="" />
+										<img src="https://s2.loli.net/2022/07/13/cMCRjltBQh3fFUe.png" height=50% />
 									</span>
                 </section>
 
