--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         </ul>
                     </div>
                     <span class="image object">
-										<img src="https://s2.loli.net/2022/07/13/cMCRjltBQh3fFUe.png" height=50% />
-									</span>
+							<img src="images/pic01.jpg" alt=""/>
+							</span>
                 </section>
 
                 <!-- Section -->
